Uploading changes from the past 2 weeks
This includes finished player movement and looking code and unfinished but functional candle code from Ethan's working branch.

--- a/ignore.conf
+++ b/ignore.conf
@@ -14,17 +14,16 @@ MemoryCaptures
 memorycaptures
 Logs
 logs
-**/Assets/AssetStoreTools
-**/assets/assetstoretools
-/Assets/Plugins/PlasticSCM*
-/assets/plugins/PlasticSCM*
+/ignore.conf
 *.private
 *.private.meta
 ^*.private.[0-9]+$
 ^*.private.[0-9]+.meta$
+**/Assets/AssetStoreTools
+**/assets/assetstoretools
+/Assets/Plugins/PlasticSCM*
+/assets/plugins/PlasticSCM*
 .vs
-.vscode
-.idea
 .gradle
 ExportedObj
 .consulo
@@ -46,12 +45,10 @@ ExportedObj
 *.pdb.meta
 *.mdb.meta
 sysinfo.txt
-crashlytics-build.properties
 *.apk
-*.aab
-*.app
 *.unitypackage
-~UnityDirMonSyncFile~*
+.collabignore
+crashlytics-build.properties
 **/Assets/AddressableAssetsData/*/*.bin*
 **/assets/addressableassetsdata/*/*.bin*
 **/Assets/StreamingAssets/aa.meta
@@ -59,3 +56,4 @@ crashlytics-build.properties
 .DS_Store*
 Thumbs.db
 Desktop.ini
+~UnityDirMonSyncFile~*
